fix: add transition effects for project card visibility

--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -1,10 +1,18 @@
 /* project card */
-.project {
+.project.hidden {
   display: flex;
   flex-direction: column;
   max-width: min(21.25rem, 100%);
   border-radius: var(--radius);
   border: 1px solid var(--border-light);
+  opacity: 0;
+  transform: translate(0, 2.5rem);
+  transition: all 0.7s ease-in-out;
+}
+
+.project.show {
+  opacity: 1;
+  transform: translate(0, 0);
 }
 
 /* image wrapper with gradient background */
